# cookiecutter-uv-ml-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: LICENSE  README.md  pyproject.toml
